# RACE

./: .gitignore  README.md  test_text_marker.py
.claude/: claude.md
bound/: 0927_inner_world.csv  0927_outer_world.csv  hazard_1.csv  hazard_2.csv
bound/1027/: inner_bound.csv  inner_bound.npy  outer_bound.csv  outer_bound.npy
bound/1028/: inner_bound.csv  inner_bound.npy  outer_bound.csv  outer_bound.npy
bound/1029_1/: inner_bound.csv  inner_bound.npy  outer_bound.csv  outer_bound.npy
bound/1030/: inner_bound.csv  inner_bound.npy  inner_bound_world.csv  opp_inner_bound.npy  outer_bound.csv  outer_bound.npy  outer_bound_world.csv
bound/1031/: inner_bound.csv  inner_bound.npy  opp_outer_bound.npy  outer_bound.csv  outer_bound.npy
bound/1031_1/: inner_bound.csv  inner_bound.npy  opp_inner_bound.csv  opp_inner_bound.npy  opp_outer_bound.csv  opp_outer_bound.npy  outer_bound.csv  outer_bound.npy
bounds/: 1027_outer_bound.csv  1027_outer_bound_world.csv  outer_bound_pixels.csv  outer_bound_pixels_world.csv
map/: 1017.csv  1017.yaml  1027.pgm  1027.yaml  1028.pgm  1028.yaml  1029.pgm  1029.yaml  1030.pgm  1030.yaml  1031.pgm  1031.yaml  1031_1.pgm  1031_1.yaml  1031_1_with_obstacle.pgm  1031_1_with_obstacle.yaml  1102.pgm  1102.yaml  1103.pgm  1103.yaml  1103_joon.pgm  1103_joon.yaml  1105.pgm  1105.yaml  f1.pgm  f1.yaml  f1_2.pgm  f1_2.yaml  f1_3.pgm  f1_3.yaml  f1_tt.pgm  f1_tt.yaml  f1tenth.yaml  nochun.pgm  nochun.yaml  pgm2bound.py  test.pgm  test.yaml
path/: initial_poses.csv  path_points.csv
path/1017_for_mpcc/: center_spline_derivatives.csv  centerline_waypoints.csv  left_waypoints.csv  right_waypoints.csv  track_widths.csv
path/1031_1_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv
path/1031_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv
path/1102_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv
path/1103_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv
path/1103_joon_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv
path/f1_2_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv  track_unified.csv
path/f1_3_for_map/: lane_left_full.csv  lane_optimal_full.csv
path/f1tenth/: lane_left.csv  lane_optimal.csv  lane_right.csv  traj_race_cl.csv
path/f1tenth_for_map/: lane_left_full.csv  lane_optimal_full.csv  lane_right_full.csv  track_unified.csv
path/nochun_for_mpcc/: center_spline_derivatives.csv  centerline_waypoints.csv  left_waypoints.csv  right_waypoints.csv  track_widths.csv
real_ws/: 1029_1.pgm  1029_1.yaml  1031.pgm  1031.yaml  1031_1.pgm  1031_1.yaml  all.sh  f1tenth.pgm  f1tenth.yaml  frames_2025-10-30_19.22.24.gv  launch_all.sh  nemo.pgm  nemo.yaml
real_ws/install/: local_setup.sh  setup.sh
real_ws/log/: latest_build
real_ws/map_global_path_bound/: README.md
real_ws/rosbag2_2025_11_01-04_55_25/: metadata.yaml
real_ws/src/app/: CMakeLists.txt  README_STEERING_TEST.md
real_ws/src/app/config/: pure_pursuit_config.yaml
real_ws/src/app/launch/: pure_pursuit_launch.py  steering_test.launch.py
real_ws/src/app/scripts/: path_performance_analyzer.py  steering_test_node.py
real_ws/src/app/src/: pure_pursuit_node.cpp
real_ws/src/lane_selector/: CMakeLists.txt  package.xml
real_ws/src/lane_selector/config/: lane_selector.yaml
real_ws/src/lane_selector/lane_selector/: lane_selector_node.py
real_ws/src/lane_selector/msg/: LaneSegment.msg
real_ws/src/obs_detect/: README_OPTIMIZATION.md  package.xml  setup.py
real_ws/src/obs_detect/config/: obs_detect.yaml  obs_detect_params.yaml  ring_viz.yaml  ring_viz_params.yaml
real_ws/src/obs_detect/launch/: boundary_viz.launch.py  joon_obs_launch.py  obs_detect_launch.py  ring_obs.launch.py  ring_viz.launch.py  ring_viz_optimized.launch.py
real_ws/src/obs_detect/obs_detect/: __init__.py  boundary_viz_node.py  joon_obs_node.py  obs_detect_node.py  ring_obs_node.py  ring_viz_node.py  ring_viz_node_optimized.py
sim_ws/: .gitignore
sim_ws/src/mpcc/: CMakeLists.txt  package.xml
sim_ws/src/mpcc/params/: mpcc_params.yaml
sim_ws/src/mpcc/scripts/: Nonlinear_MPC.py  Nonlinear_MPC_node.py  mpcc.py  mpcc_node.py
sim_ws/src/mpcc/scripts/f1tenth/: center_spline_derivatives.csv  centerline_waypoints.csv  left_waypoints.csv  right_waypoints.csv  track_widths.csv
sim_ws/src/mpcc/scripts/f1tenth_for_mpcc/: left_waypoints.csv
trajectory_generator/: README_boundary_editor.md  boundary_generator.py  generate_all_lanes.sh  goal_line.py  lane_generator.py  lane_generator_for_mpcc.py  main_globaltraj.py  main_globaltraj_for_mpcc.py  visualize_all_lanes.py
(+1001 files in other folders)
